--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "twit": "~1.1.11"
+    "twit": "~1.1.11",
+    "heroku-ping": "~0.1.0"
   }
 }
